--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 <color name="bg_screen1">#f64c73</color>
 <color name="bg_screen2">#20d2bb</color>
 <color name="bg_screen3">#3395ff</color>
-<color name="bg_screen4">#c873f4</color>
+<color name="bg_screen4">#75A9BD</color>
 
 <!-- dots inactive colors -->
 <color name="dot_dark_screen1">#d1395c</color>
@@ -23,7 +23,7 @@
 <color name="dot_light_screen1">#f98da5</color>
 <color name="dot_light_screen2">#8cf9eb</color>
 <color name="dot_light_screen3">#93c6fd</color>
-<color name="dot_light_screen4">#e4b5fc</color>
+<color name="dot_light_screen4">#BEB3B3</color>
 
 <array name="array_dot_active">
     <item>@color/dot_light_screen1</item>
