edit western dan indonesian

--- a/app/src/main/res/layout/fragment_western.xml
+++ b/app/src/main/res/layout/fragment_western.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dot_dark_screen3"
+    android:background="@color/grey"
     tools:context=".fragments.WesternFragment" >
 
     <TextView
@@ -78,16 +78,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <ImageView
-        android:id="@+id/imageView20"
-        android:layout_width="137dp"
-        android:layout_height="105dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/cake2"
+        android:id="@+id/imageView19"
+        android:layout_width="407dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="112dp"
+        android:src="@drawable/line1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+    <ImageView
+        android:id="@+id/imageView22"
+        android:layout_width="198dp"
+        android:layout_height="112dp"
+        android:src="@drawable/foodies"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.196" />
+        app:layout_constraintVertical_bias="0.335" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
