--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
 <color name="colorPrimaryDark">#303F9F</color>
 <color name="colorAccent">#FF4081</color>
 <color name="white">#FFFFFF</color>
+    <color name="grey">#C7C2C2</color>
 
     <color name="colorBg">#91BEB5</color>
     <color name="colorW1">#50599B</color>
