--- a/app/src/main/res/layout/fragment_indonesian.xml
+++ b/app/src/main/res/layout/fragment_indonesian.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dot_light_screen2"
+    android:background="@color/grey"
     tools:context=".fragments.IndonesianFragment" >
 
     <TextView
@@ -81,15 +81,23 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="450dp"
+        android:layout_height="188dp"
+        android:src="@drawable/line1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="171dp"
-        android:layout_height="148dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:src="@drawable/abc"
+        android:layout_width="125dp"
+        android:layout_height="110dp"
+        android:src="@drawable/foodies"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16"
-        app:layout_constraintVertical_bias="0.159" />
+        app:layout_constraintVertical_bias="0.176" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
