--- a/app/src/main/res/layout/activity_western_food.xml
+++ b/app/src/main/res/layout/activity_western_food.xml
@@ -21,9 +21,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif"
         android:text="WESTERN FOOD"
         android:textSize="30sp"
-        android:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,15 +41,15 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="141dp"
-        android:layout_height="87dp"
+        android:layout_width="151dp"
+        android:layout_height="79dp"
         android:layout_marginTop="208dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.329"
+        app:layout_constraintVertical_bias="0.112"
         app:srcCompat="@drawable/burger" />
 
     <TextView
@@ -57,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Burger"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
@@ -89,10 +90,10 @@
         android:layout_marginTop="184dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.816"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/textView13"
-        app:layout_constraintVertical_bias="0.392"
+        app:layout_constraintVertical_bias="0.292"
         app:srcCompat="@drawable/steak" />
 
     <TextView
@@ -111,10 +112,10 @@
         android:layout_height="162dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.509"
+        app:layout_constraintVertical_bias="0.55"
         app:srcCompat="@drawable/pancake" />
 
     <TextView
@@ -125,4 +126,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+
+    <ImageView
+        android:id="@+id/imageView23"
+        android:layout_width="334dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="72dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/line2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
