--- a/app/src/main/res/layout/fragment_western.xml
+++ b/app/src/main/res/layout/fragment_western.xml
@@ -78,15 +78,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <ImageView
-        android:id="@+id/imageView19"
-        android:layout_width="407dp"
-        android:layout_height="175dp"
-        android:layout_marginTop="112dp"
-        android:src="@drawable/line1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-    <ImageView
         android:id="@+id/imageView22"
         android:layout_width="198dp"
         android:layout_height="112dp"
@@ -95,5 +86,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
         app:layout_constraintVertical_bias="0.335" />
+
+    <ImageView
+        android:id="@+id/imageView19"
+        android:layout_width="414dp"
+        android:layout_height="133dp"
+        android:src="@drawable/line3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
