--- a/app/src/main/res/layout/activity_indonesian_food.xml
+++ b/app/src/main/res/layout/activity_indonesian_food.xml
@@ -10,10 +10,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif"
         android:text="INDONESIAN FOOD"
         android:textSize="30sp"
-        android:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,8 +23,9 @@
         android:id="@+id/imageView5"
         android:layout_width="179dp"
         android:layout_height="139dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:srcCompat="@drawable/pecel" />
@@ -31,8 +34,9 @@
         android:id="@+id/imageView6"
         android:layout_width="174dp"
         android:layout_height="142dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.634"
+        app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:srcCompat="@drawable/ayam_betutu" />
@@ -121,7 +125,18 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.447"
+        app:layout_constraintVertical_bias="0.546"
         app:srcCompat="@drawable/soto_ayam" />
+
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="336dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="56dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/line2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
