--- a/app/src/main/res/layout/fragment_indonesian.xml
+++ b/app/src/main/res/layout/fragment_indonesian.xml
@@ -81,16 +81,6 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="450dp"
-        android:layout_height="188dp"
-        android:src="@drawable/line1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
         android:id="@+id/imageView17"
         android:layout_width="125dp"
         android:layout_height="110dp"
@@ -99,5 +89,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16"
         app:layout_constraintVertical_bias="0.176" />
+
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="411dp"
+        android:layout_height="107dp"
+        android:src="@drawable/line3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
