--- a/app/src/main/res/layout/fragment_indonesian.xml
+++ b/app/src/main/res/layout/fragment_indonesian.xml
@@ -12,8 +12,8 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:text="4. Sate Ayam Madura"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +37,8 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="44dp"
         android:text="1. Pecel Madiun"
         android:textSize="18sp"
@@ -49,8 +49,8 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:text="2. Soto Ayam Lamongan"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +60,8 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:text="3. Rawon Rampal"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,8 +71,8 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:text="5. Ayam Betutu Bali"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,6 +84,8 @@
         android:id="@+id/imageView17"
         android:layout_width="125dp"
         android:layout_height="110dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:src="@drawable/foodies"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
