--- a/app/src/main/res/layout/fragment_western.xml
+++ b/app/src/main/res/layout/fragment_western.xml
@@ -11,8 +11,8 @@
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
         android:text="2. KFC"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,9 +36,9 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="28dp"
         android:text="1. Pizza Hut"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,8 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
         android:text="3. Holycow"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +59,8 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
         android:text="4. Fish n Co"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,8 +70,8 @@
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
         android:text="5. Sushi Tei"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,13 +79,15 @@
 
     <ImageView
         android:id="@+id/imageView22"
-        android:layout_width="198dp"
-        android:layout_height="112dp"
+        android:layout_width="157dp"
+        android:layout_height="72dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
         android:src="@drawable/foodies"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.335" />
+        app:layout_constraintVertical_bias="0.238" />
 
     <ImageView
         android:id="@+id/imageView19"
