--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -31,13 +31,12 @@
 
     <ImageView
         android:id="@+id/imageView20"
-        android:layout_width="373dp"
-        android:layout_height="233dp"
-        android:layout_marginTop="576dp"
+        android:layout_width="361dp"
+        android:layout_height="204dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginBottom="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/line1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
